objects/avoka__Transact_Delivery__c.object
<CustomObject>
    <description>Landing point for inbound submissions from Avoka Transact.</description>
    <fields>
        <fullName>avoka__Affected_Sobject_Id__c</fullName>
        <description>The Sobject Id of the primary object affected by the processing of the submission in SalesForce. E.g. if a lead was created off the submission, then the lead Id should be updated here.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Sobject Id of the primary object affected by the processing of the submission in SalesForce. E.g. if a lead was created off the submission data, then the lead Id should be updated here.</inlineHelpText>
        <label>Affected Sobject Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Attachment_Count__c</fullName>
        <description>Number of attachments provided with the submission.</description>
        <inlineHelpText>Number of attachments provided with the submission.</inlineHelpText>
        <label>Attachment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avoka__Attachment_Metadata__c</fullName>
        <description>Contains JSON formatted metadata about each of the attachment files</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains JSON formatted metadata about each of the attachment files</inlineHelpText>
        <label>Attachment Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Case_Number__c</fullName>
        <description>Optional SalesForce case number value to be stored against the submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional SalesForce case number value to be stored against the submission.</inlineHelpText>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Data_Extracts__c</fullName>
        <description>Contains any data extracts fields pulled from the XML (configured in Avoka Transact).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains any data extracts fields pulled from the XML (configured in Avoka Transact).</inlineHelpText>
        <label>Data Extracts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Delivery_Trigger_Type__c</fullName>
        <description>Identifies the type of action that triggered the delivery.</description>
        <inlineHelpText>Identifies the type of action that triggered the delivery.</inlineHelpText>
        <label>Delivery Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Transaction</fullName>
                    <default>true</default>
                    <label>Completed Transaction</label>
                </value>
                <value>
                    <fullName>Saved Transaction</fullName>
                </value>
                <value>
                    <fullName>Abandoned Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avoka__Form_Code__c</fullName>
        <description>Unique identifier for a form in Avoka Transact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique identifier for a form in Avoka Transact.</inlineHelpText>
        <label>Form Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Form_Name__c</fullName>
        <description>The name of the form in Avoka Transact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the form in Avoka Transact.</inlineHelpText>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Form_Version__c</fullName>
        <description>The version of the form that was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The version of the form that was submitted.</inlineHelpText>
        <label>Form Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Job_Reference_Code__c</fullName>
        <description>Where multiple forms were completed as part of a collaboration job using form bundles, this reference code will be the same for all transactions delivered as output from that job.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Where multiple forms were completed as part of a collaboration job using form bundles, this reference code will be the same for all transactions delivered as output from that job.</inlineHelpText>
        <label>Job Reference Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Payment_Amount__c</fullName>
        <description>The amount paid by the user when submitting the transaction in Avoka Transact</description>
        <inlineHelpText>The amount paid by the user when submitting the transaction in Avoka Transact</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>avoka__Payment_Gateway_Receipt_Number__c</fullName>
        <description>Receipt number provided by the payment gateway for the payment transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Receipt number provided by the payment gateway for the payment transaction.</inlineHelpText>
        <label>Payment Gateway Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Payment_Gateway_Timestamp__c</fullName>
        <description>Date and time provided by the payment gateway when the payment transaction occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date and time provided by the payment gateway when the payment transaction occurred.</inlineHelpText>
        <label>Payment Gateway Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Payment_Gateway_Transaction_Number__c</fullName>
        <description>Transaction number provided by the gateway for the payment transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Transaction number provided by the gateway for the payment transaction.</inlineHelpText>
        <label>Payment Gateway Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Portal_Name__c</fullName>
        <description>The name of the portal in Avoka Transact where the transaction was initiated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the portal in Avoka Transact where the transaction was initiated.</inlineHelpText>
        <label>Portal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Processed_Timestamp__c</fullName>
        <description>The date and time that the delivery was processed in SalesForce.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date and time that the delivery was processed in SalesForce.</inlineHelpText>
        <label>Processed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Processing_Message__c</fullName>
        <description>Provides any message relevant to the processing.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provides any message relevant to the processing.</inlineHelpText>
        <label>Processing Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Processing_Status__c</fullName>
        <description>Current status of submission processing within SalesForce.</description>
        <inlineHelpText>Current status of submission processing within SalesForce.</inlineHelpText>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <color>#DDDDDD</color>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FFCC33</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                    <color>#FF0000</color>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#33FF33</color>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avoka__Submission_Data__c</fullName>
        <description>XML data from the submitted form.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>XML data from the submitted form.</inlineHelpText>
        <label>Submission Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Submission_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier of the submission in Avoka Transact</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Submission Key</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>avoka__Submission_Timestamp__c</fullName>
        <description>Date and time when the submission was received by Avoka Transact</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date and time when the submission was received by Avoka Transact</inlineHelpText>
        <label>Submission Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Sync_Status__c</fullName>
        <description>At the completion of delivery processing if there is an Affected SObject Id or Case Number recorded, these need to be returned to Avoka Transact and stored against the transaction record. This field identifies if that sync has occurred.</description>
        <inlineHelpText>At the completion of delivery processing if there is an Affected SObject Id or Case Number recorded, these need to be returned to Avoka Transact and stored against the transaction record. This field identifies if that sync has occurred.</inlineHelpText>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avoka__Transaction_Score__c</fullName>
        <description>The score given to the transaction by Avoka Transact</description>
        <label>Transaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avoka__Transaction_Status__c</fullName>
        <defaultValue>&quot;Complete&quot;</defaultValue>
        <description>The status of the transaction in Avoka Transact at the time of delivery.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The status of the transaction in Avoka Transact at the time of delivery.</inlineHelpText>
        <label>Transaction Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__User_Name__c</fullName>
        <description>User name attached to the submission where the user was authenticated</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Delivery Record</label>
    <listViews>
        <fullName>All_Abandoned_Deliveries</fullName>
        <columns>NAME</columns>
        <columns>avoka__Job_Reference_Code__c</columns>
        <columns>avoka__Form_Code__c</columns>
        <columns>avoka__Submission_Timestamp__c</columns>
        <columns>avoka__Processing_Status__c</columns>
        <columns>avoka__Processing_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>avoka__Delivery_Trigger_Type__c</field>
            <operation>equals</operation>
            <value>Abandoned Transaction</value>
        </filters>
        <label>All Abandoned Deliveries</label>
    </listViews>
    <listViews>
        <fullName>avoka__All</fullName>
        <columns>NAME</columns>
        <columns>avoka__Job_Reference_Code__c</columns>
        <columns>avoka__Form_Code__c</columns>
        <columns>avoka__Submission_Timestamp__c</columns>
        <columns>avoka__Processing_Status__c</columns>
        <columns>avoka__Processing_Message__c</columns>
        <columns>avoka__Delivery_Trigger_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>